# eclosion-for-monarch

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .trivyignore  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  REFACTORING_PROGRESS.md  SECURITY.md  TODO-DESKTOP.md  TODO.md  api.py  app.py  docker-compose.yml  github-repo-setup.md  monarch-compliance.md  monarch_utils.py  package-lock.json  package.json  pyproject.toml  release-please-config.json  renovate.json  requirements-build.txt  requirements-dev.in  requirements-dev.txt  requirements-vcs.txt  requirements.in  requirements.txt  sync_cli.py  trivy.yaml  zap.yaml
.claude/rules/: available-to-stash.md  data-stores.md  demo-mode.md  documentation.md  testing.md  workflows.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  mlc_config.json  pull_request_template.md  scorecard.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: 01-ci.yml  02-check-branch.yml  03-check-version.yml  04-build-docker.yml  10-security.yml  11-scorecard.yml  20-release-beta.yml  21-release-stable.yml  22-release-pipeline.yml  23-build-desktop.yml  24-deploy-cloudflare.yml  25-dev-build.yml  27-deploy-tunnel-worker.yml  29-release-local.yml  30-test-integration.yml  40-gen-contributors.yml  41-gen-docs.yml  42-sync-wiki.yml  43-sync-productboard.yml  44-update-release-notes.yml  branch-naming.yml  build-desktop.yml  ci.yml  copilot-review.yml  create-beta.yml  create-stable.yml  deploy-cloudflare.yml  deploy-demo.yml  docker-publish.yml  generate-contributors.yml  generate-docs.yml  integration-tests.yml  release-pipeline.yml  release-please.yml  release.yml  require-develop.yml  scorecard.yml  security.yml  sync-productboard.yml  sync-wiki.yml  (+1 more)
.husky/: pre-commit  pre-push
.zap/: rules.tsv
blueprints/: __init__.py  admin.py  auth.py  ifttt.py  internal.py  notes.py  recurring.py  remote.py  security.py  settings.py  stash.py  wishlist.py
config/: .trivyignore  alembic.ini
core/: __init__.py  audit.py  automation_credentials.py  config.py  decorators.py  encryption.py  error_detection.py  exceptions.py  keychain.py  logging_config.py  middleware.py  rate_limit.py  sanitization.py  scheduler.py  session.py
data/: ideas.json
desktop/: CONTRIBUTING.md  afterPack.js  electron-builder.beta.yml  electron-builder.yml  entitlements.mac.plist  eslint.config.js  notarize.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
desktop/assets/: icon-beta.icns  icon.icns
desktop/e2e/: demo-mode.spec.ts  landing-page.spec.ts
desktop/installer/: custom.nsh  uninstaller.nsh
desktop/pyinstaller/: eclosion.spec  hook-ssl-certs.py
desktop/scripts/: build-backend.js  build-main.js  generate-icons.js  package-all.js
docs/: Home.md  SELF_HOSTING.md
docs/plans/: normalized-category-cache.md
docusaurus/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  sidebarsGuide.ts  versions.json
docusaurus/docs/: _category_.json  category-linking.mdx  contributing.md  intro.md  intro.mdx  recurring-expenses.mdx  security.md
docusaurus/guide/: intro.mdx  rollup-category.mdx  setup-wizard.mdx
docusaurus/versioned_sidebars/: version-1.0.11-sidebars.json  version-1.0.3-sidebars.json  version-1.1.7-sidebars.json  version-1.2-sidebars.json  version-1.3.1-sidebars.json  version-1.3.7-sidebars.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: 404.html  _redirects  manifest.json  sw.js  theme-init.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
requirements/: base.in  base.txt  build.in  build.txt  dev.txt
scripts/: check-file-length.py  check-monarch-api-coverage.py  dev.sh  test-dast.sh
scripts/contributors-gen/: cache.json  config.ts  generator.ts  git-parser.ts  github-client.ts  index.ts  package-lock.json  package.json  types.ts
scripts/docs-gen/: extractor.ts  generator.ts  index.ts  manifest.ts  mdx-builder.ts  package-lock.json  package.json  tsconfig.json  types.ts
scripts/productboard-sync/: README.md  export.ts  filter.ts  index.ts  package-lock.json  package.json  scraper.ts  state.json  sync.ts  types.ts
scripts/release-notes-updater/: generate-notes.ts  generator.ts  index.ts  package-lock.json  package.json  tsconfig.json  utils.ts
scripts/screenshots-gen/: capture.ts  config.ts  frame.ts  index.ts  package-lock.json  package.json  types.ts
services/: __init__.py  category_manager.py  category_operations.py  credentials_service.py  encrypted_export_service.py  frozen_target_calculator.py  ifttt_service.py  metadata_service.py  recurring_service.py  refundables_service.py  rollup_service.py  savings_calculator.py  security_service.py  settings_export_service.py  stash_service.py  sync_service.py  transaction_categorizer.py  wishlist_service.py
state/: __init__.py  security_events.db  state_cache.py  state_manager.py
state/db/: __init__.py  database.py  inline_migrations.py
state/migrations/: __init__.py  backup.py  base.py  compatibility.py  executor.py  registry.py
tests/: conftest.py  test_api_endpoints.py  test_credentials_service.py  test_frozen_target_calculator.py  test_recurring_service.py  test_rollup_service.py  test_savings_calculator.py  test_security_service.py  test_settings_export_service.py  test_state_manager.py  test_sync_service.py  test_transaction_categorizer.py
tests/integration/: __init__.py  conftest.py  (+9 more)
wiki/: Adding-Features.md  Contributing.md  Desktop-App.md  Home.md  Introduction.md  Security.md  Updating.md  _Footer.md  _Sidebar.md  changelog.md  contributing.md  intro.md  security.md  self-hosting-data-management.md  self-hosting-docker.md  self-hosting-environment-variables.md  self-hosting-monitoring.md  self-hosting-overview.md  self-hosting-platforms-portainer.md  self-hosting-reverse-proxy.md  self-hosting-security-hardening.md  self-hosting-troubleshooting.md
(+833 files in other folders)
