[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eclosion"
version = "1.0.15"
description = "Eclosion for Monarch - Your budgeting, evolved"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Grayson Adams" }]
maintainers = [{ name = "312.dev", email = "ope@312.dev" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "monarchmoney @ git+https://github.com/312-dev/monarchmoney.git@a8bb226d12112fbdfa575af344f65426643a1f11",
    "pyotp>=2.9.0",
    "Flask>=3.1.0",
    "flask-cors>=4.0.0",
    "flask-limiter>=3.8.0",
    "python-dotenv>=1.1.0",
    "cachetools>=6.1.0",
    "cryptography>=41.0.0",
    "APScheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    # Linting & Formatting
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    # Pre-commit
    "pre-commit>=3.7.0",
    # Type stubs
    "types-cachetools>=5.3.0",
]

# ============================================================================
# Ruff Configuration (replaces black, isort, flake8, pylint)
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = [".", "core", "services", "state"]

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "frontend",
    "static",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    "desktop",
    "docusaurus",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complexity
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "PLR",  # Pylint refactoring rules (function length, complexity)
    "PLC",  # Pylint convention
    "PLE",  # Pylint errors
    "PLW",  # Pylint warnings
    "ARG",  # flake8-unused-arguments
    "PERF", # Perflint (performance anti-patterns)
    "FURB", # refurb (modern Python idioms)
    # "PTH",  # flake8-use-pathlib - TODO: Enable after migrating to pathlib
]

ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # function call in default argument (common in Flask)
    "B904",    # raise-without-from (too noisy initially)
    "SIM108",  # ternary operator (readability preference)
    "PLR2004", # magic-value-comparison (too noisy for business logic)
    "PLR0913", # too-many-arguments (Flask routes often need many params)
    "ARG001",  # unused-function-argument (Flask routes use unused params)
    "ARG002",  # unused-method-argument (common in base classes)
    "PLC0415", # import-outside-toplevel (Flask blueprints use lazy imports)
    "PLW0603", # global-statement (singleton pattern is intentional)
]

fixable = ["ALL"]
unfixable = []

# Complexity thresholds (matching frontend's approach)
[tool.ruff.lint.mccabe]
max-complexity = 15  # Same as frontend SonarJS cognitive-complexity

[tool.ruff.lint.pylint]
max-args = 8              # Allow up to 8 args (Flask routes can be complex)
max-branches = 15         # Max branches per function
max-returns = 8           # Max return statements
max-statements = 60       # Max statements per function (~300 lines equivalent)
max-locals = 20           # Max local variables

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B011", "S101", "PLR2004", "ARG", "PLR0915", "PLR0912"]
"sync_cli.py" = ["E402"]  # Imports after sys.path modification
# Legacy files that need refactoring - tracked for cleanup
"services/stash_service.py" = ["PLR0915", "PLR0912", "C901"]  # TODO: Refactor into smaller modules
"services/sync_service.py" = ["PLR0915", "PLR0912", "C901"]   # TODO: Refactor into smaller modules
"lib/monarchmoney_backup.py" = ["ALL"]  # Legacy backup file, not actively maintained

[tool.ruff.lint.isort]
known-first-party = ["core", "services", "state", "monarch_utils"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# Mypy Configuration (aiming for TypeScript-level strictness)
# ============================================================================
[tool.mypy]
python_version = "3.11"

# Enabled strict checks (matching TypeScript strict mode philosophy)
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
extra_checks = true  # Replaces deprecated strict_concatenate
no_implicit_optional = true
no_implicit_reexport = true

# Gradual strictness - enable these as codebase improves
disallow_untyped_defs = false        # TODO: Enable after adding type hints
disallow_incomplete_defs = false     # TODO: Enable with disallow_untyped_defs
disallow_untyped_decorators = false  # TODO: Enable after typing decorators

# Error handling
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true

exclude = [
    "^desktop/",
    "^docusaurus/",
    "^scripts/",
    "^frontend/",
    "^lib/",  # Legacy backup files
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "index", "arg-type"]  # More permissive for test mocks

[[tool.mypy.overrides]]
module = "monarchmoney.*"
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short", "--strict-markers", "-ra"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]
filterwarnings = ["ignore::DeprecationWarning:monarchmoney.*"]

[tool.coverage.run]
source = ["core", "services", "state"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 0  # Start at 0, increase as coverage improves
